--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -109,9 +109,11 @@
   <ItemGroup>
     <ClCompile Include="src\3DtestApp.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\terrain2texShader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h" />
+    <ClInclude Include="src\terrain2texShader.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\3DEngine\3DEngine\3DEngine.vcxproj">
