--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -108,11 +108,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\3DtestApp.cpp" />
+    <ClCompile Include="src\gameTerrain.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\terrain2texShader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h" />
+    <ClInclude Include="src\gameTerrain.h" />
     <ClInclude Include="src\terrain2texShader.h" />
   </ItemGroup>
   <ItemGroup>
