--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="src\terrain2texShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\gameTerrain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\terrain2texShader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\gameTerrain.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
