--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -110,10 +110,12 @@
     <ClCompile Include="src\3DtestApp.cpp" />
     <ClCompile Include="src\gameTerrain.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\worldUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h" />
     <ClInclude Include="src\gameTerrain.h" />
+    <ClInclude Include="src\worldUI.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\3DEngine\3DEngine\3DEngine.vcxproj">
