Local hot text list working.

--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -109,12 +109,14 @@
   <ItemGroup>
     <ClCompile Include="src\3DtestApp.cpp" />
     <ClCompile Include="src\gameTerrain.cpp" />
+    <ClCompile Include="src\localHotList.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\worldUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h" />
     <ClInclude Include="src\gameTerrain.h" />
+    <ClInclude Include="src\localHotList.h" />
     <ClInclude Include="src\worldUI.h" />
   </ItemGroup>
   <ItemGroup>
