--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\GUIdistributor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\GUIhealthPanel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\GUIdistributor.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GUIhealthPanel.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
