--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\hexRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\hexWorld.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h">
@@ -69,6 +72,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\hexRenderer.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\hexWorld.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
