--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\hexWorld.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\robot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\hexWorld.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\robot.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
