--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\robot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\playerHexObj.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\robot.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\playerHexObj.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
