--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="src\hexWorld.cpp" />
     <ClCompile Include="src\localHotList.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\mapMaker.cpp" />
     <ClCompile Include="src\playerHexObj.cpp" />
     <ClCompile Include="src\robot.cpp" />
     <ClCompile Include="src\worldUI.cpp" />
@@ -138,6 +139,7 @@
     <ClInclude Include="src\GUIrichTextPanel.h" />
     <ClInclude Include="src\hexWorld.h" />
     <ClInclude Include="src\localHotList.h" />
+    <ClInclude Include="src\mapMaker.h" />
     <ClInclude Include="src\playerHexObj.h" />
     <ClInclude Include="src\robot.h" />
   </ItemGroup>
