--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="src\hexItem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\groupItem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h">
@@ -108,6 +111,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\hexItem.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\groupItem.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
