Part way into stack-based actions for robots

--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -154,7 +154,9 @@
     <ClInclude Include="src\GUIrichTextPanel.h" />
     <ClInclude Include="src\hexItem.h" />
     <ClInclude Include="src\hexWorld.h" />
+    <ClInclude Include="src\IGameHexArray.h" />
     <ClInclude Include="src\IHexWorld.h" />
+    <ClInclude Include="src\ImainApp.h" />
     <ClInclude Include="src\localHotList.h" />
     <ClInclude Include="src\mapMaker.h" />
     <ClInclude Include="src\playerHexObj.h" />
