--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="src\gameTextWin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\door.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h">
@@ -147,6 +150,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\IGameHexArray.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\door.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
