--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -118,7 +118,6 @@
   <ItemGroup>
     <ClCompile Include="src\3DtestApp.cpp" />
     <ClCompile Include="src\bolt.cpp" />
-    <ClCompile Include="src\defencePanels.cpp" />
     <ClCompile Include="src\door.cpp" />
     <ClCompile Include="src\gameHexArray.cpp" />
     <ClCompile Include="src\gamehextObj.cpp" />
@@ -138,13 +137,13 @@
     <ClCompile Include="src\playerHexObj.cpp" />
     <ClCompile Include="src\robot.cpp" />
     <ClCompile Include="src\gridObj.cpp" />
+    <ClCompile Include="src\shieldPanel.cpp" />
     <ClCompile Include="src\worldUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\TC\Debug\tigConst.h" />
     <ClInclude Include="src\3DtestApp.h" />
     <ClInclude Include="src\bolt.h" />
-    <ClInclude Include="src\defencePanels.h" />
     <ClInclude Include="src\door.h" />
     <ClInclude Include="src\gameHexArray.h" />
     <ClInclude Include="src\gamehextObj.h" />
@@ -166,6 +165,7 @@
     <ClInclude Include="src\playerHexObj.h" />
     <ClInclude Include="src\robot.h" />
     <ClInclude Include="src\gridObj.h" />
+    <ClInclude Include="src\shieldPanel.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\3DEngine\3DEngine\3DEngine.vcxproj">
