--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="src\3DtestApp.cpp" />
     <ClCompile Include="src\bolt.cpp" />
     <ClCompile Include="src\door.cpp" />
+    <ClCompile Include="src\fireable.cpp" />
     <ClCompile Include="src\gameHexArray.cpp" />
     <ClCompile Include="src\gamehextObj.cpp" />
     <ClCompile Include="src\gameTerrain.cpp" />
@@ -135,6 +136,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mapMaker.cpp" />
     <ClCompile Include="src\playerHexObj.cpp" />
+    <ClCompile Include="src\powerSupply.cpp" />
     <ClCompile Include="src\robot.cpp" />
     <ClCompile Include="src\gridObj.cpp" />
     <ClCompile Include="src\shieldPanel.cpp" />
@@ -145,8 +147,10 @@
     <ClInclude Include="src\3DtestApp.h" />
     <ClInclude Include="src\bolt.h" />
     <ClInclude Include="src\door.h" />
+    <ClInclude Include="src\fireable.h" />
     <ClInclude Include="src\gameHexArray.h" />
     <ClInclude Include="src\gamehextObj.h" />
+    <ClInclude Include="src\gameMsg.h" />
     <ClInclude Include="src\gameTerrain.h" />
     <ClInclude Include="src\gameTextWin.h" />
     <ClInclude Include="src\gameWin.h" />
@@ -156,6 +160,7 @@
     <ClInclude Include="src\GUIhealthPanel.h" />
     <ClInclude Include="src\GUIrichTextPanel.h" />
     <ClInclude Include="src\hexItem.h" />
+    <ClInclude Include="src\hexMsg.h" />
     <ClInclude Include="src\hexWorld.h" />
     <ClInclude Include="src\IGameHexArray.h" />
     <ClInclude Include="src\IHexWorld.h" />
@@ -163,6 +168,8 @@
     <ClInclude Include="src\localHotList.h" />
     <ClInclude Include="src\mapMaker.h" />
     <ClInclude Include="src\playerHexObj.h" />
+    <ClInclude Include="src\powerSupply.h" />
+    <ClInclude Include="src\powerUser.h" />
     <ClInclude Include="src\robot.h" />
     <ClInclude Include="src\gridObj.h" />
     <ClInclude Include="src\shieldPanel.h" />
