--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="src\fireable.cpp" />
     <ClCompile Include="src\gameHexArray.cpp" />
     <ClCompile Include="src\gamehextObj.cpp" />
+    <ClCompile Include="src\gameState.cpp" />
     <ClCompile Include="src\gameTerrain.cpp" />
     <ClCompile Include="src\gameTextWin.cpp" />
     <ClCompile Include="src\gameWin.cpp" />
@@ -156,6 +157,7 @@
     <ClInclude Include="src\gameHexArray.h" />
     <ClInclude Include="src\gamehextObj.h" />
     <ClInclude Include="src\gameMsg.h" />
+    <ClInclude Include="src\gameState.h" />
     <ClInclude Include="src\gameTerrain.h" />
     <ClInclude Include="src\gameTextWin.h" />
     <ClInclude Include="src\gameWin.h" />
