--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="src\goalActor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\gameState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h">
@@ -192,6 +195,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\goalActor.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\gameState.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
