--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="src\3DtestApp.cpp" />
     <ClCompile Include="src\bolt.cpp" />
     <ClCompile Include="src\door.cpp" />
+    <ClCompile Include="src\explosion.cpp" />
     <ClCompile Include="src\fireable.cpp" />
     <ClCompile Include="src\gameHexArray.cpp" />
     <ClCompile Include="src\gamehextObj.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="src\3DtestApp.h" />
     <ClInclude Include="src\bolt.h" />
     <ClInclude Include="src\door.h" />
+    <ClInclude Include="src\explosion.h" />
     <ClInclude Include="src\fireable.h" />
     <ClInclude Include="src\gameEvents.h" />
     <ClInclude Include="src\gameHexArray.h" />
