--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -117,6 +117,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\3DtestApp.cpp" />
+    <ClCompile Include="src\gameGui.cpp" />
+    <ClCompile Include="src\item.cpp" />
     <ClCompile Include="src\door.cpp" />
     <ClCompile Include="src\explosion.cpp" />
     <ClCompile Include="src\fireable.cpp" />
@@ -136,6 +138,8 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mapMaker.cpp" />
     <ClCompile Include="src\missile.cpp" />
+    <ClCompile Include="src\physics\hexPhysics.cpp" />
+    <ClCompile Include="src\physics\phys.cpp" />
     <ClCompile Include="src\playerHexObj.cpp" />
     <ClCompile Include="src\powerSupply.cpp" />
     <ClCompile Include="src\qps.cpp" />
@@ -146,6 +150,8 @@
   <ItemGroup>
     <ClInclude Include="..\TC\Debug\tigConst.h" />
     <ClInclude Include="src\3DtestApp.h" />
+    <ClInclude Include="src\gameGui.h" />
+    <ClInclude Include="src\item.h" />
     <ClInclude Include="src\door.h" />
     <ClInclude Include="src\explosion.h" />
     <ClInclude Include="src\fireable.h" />
@@ -167,6 +173,8 @@
     <ClInclude Include="src\localHotList.h" />
     <ClInclude Include="src\mapMaker.h" />
     <ClInclude Include="src\missile.h" />
+    <ClInclude Include="src\physics\hexPhysics.h" />
+    <ClInclude Include="src\physics\phys.h" />
     <ClInclude Include="src\playerHexObj.h" />
     <ClInclude Include="src\powerSupply.h" />
     <ClInclude Include="src\powerUser.h" />
